more style changes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "free-tex-packer",
-  "displayName": "Repak Atlas Creator",
+  "displayName": "RPAC - Repak Atlas Creator",
   "version": "",
   "description": "Create Repak Atlas's with ease",
   "url": "https://r5reloaded.com",
